--- a/assessment.html
+++ b/assessment.html
@@ -2,13 +2,13 @@
 <html lang="ja">
   <head>
     <meta name="twitter:card" content="summary" />
-    <meta property="og:url" content="https://あなたのusername.github.io/assessment/assessment.html" />
-    <meta property="og:title" content="あなたのいいところ診断" />
+    <meta property="og:url" content="https://tomitz.github.io/assessment/assessment.html" />
+    <meta property="og:title" content="tomitzが作ったあなたのいいところ診断" />
     <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。" />
     <meta property="og:image" content="https://github.com/tomitz.png" />
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="assessment.css" />
-    <title>あなたのいいところ診断</title>
+    <title>tomitzが作ったあなたのいいところ診断</title>
   </head>
   <body>
     <h1>あなたのいいところは?</h1>
